<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gpc_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_marginRight="30dp"
        android:alpha="0.80"
        android:fontFamily="16sp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onChatClicked"
        android:paddingRight="129dp"
        android:radius="8dp"
        android:text="@string/chat_button"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_above="@+id/button5"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="22dp"
        android:elevation="55dp"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_chat" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:alpha="0.80"
        android:fontFamily="16sp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onLoginClicked"
        android:paddingRight="129dp"
        android:radius="8dp"
        android:text="@string/login_button"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginRight="30dp"
        android:alpha="0.80"
        android:fontFamily="16sp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onAnimationClicked"
        android:paddingRight="89dp"
        android:radius="8dp"
        android:text="@string/animation_button"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/button4"
        android:layout_alignTop="@+id/button4"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="14dp"
        android:elevation="55dp"
        android:textColor="@color/colorAccent"
        app:srcCompat="@drawable/ic_animation" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_centerVertical="true"
        android:elevation="55dp"
        android:textColor="@color/colorAccent"
        app:srcCompat="@drawable/ic_lock" />

</RelativeLayout>
